crates/dipa-derive-test/src/all_tests/ui/invalid_field_batching_strategy.rs
use dipa_derive::DiffPatch;

#[derive(DiffPatch)]
#[dipa(field_batching_strategy = "does-not-exist")]
struct Foo;

fn main() {}
